more work on the app dockerfile; all seems to work now

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,8 @@
 .git
-db/couch/*
-log/*
-tmp/*
-.idea/*
+db/couch
+log
+tmp
+.idea
 rerun.txt
 debug.html
 .DS_Store
@@ -21,14 +21,14 @@ debug.html
 *.irb-history
 .autotest
 .bundle
-.redcar/*
+.redcar
 .rvmrc
 .vagrant
 bin
-capybara_features/resources/huge.jpg
-capybara_features/resources/huge.mp3
+capybara_features
+rspec
 tags
-public/assets/
+public/assets
 config/couchdb.yml
 config/solr.yml
 config/sunspot.yml
@@ -38,16 +38,12 @@ vendor/cache/
 vendor/ruby/
 .ruby-version
 .project
-<Solr_data_dir>
 .powrc
 Guardfile
-cookbook/
+cookbook
 .project
 .buildpath
-coverage/
-spec/reports/
-capybara_features/reports/
-.ruby-gemset
+coverage
 solr/data
 solr/pids
 solr/development
