--- a/docker/app/supervisord.conf
+++ b/docker/app/supervisord.conf
@@ -2,11 +2,12 @@
 
 [program:nginx]
 command = /usr/sbin/nginx
+numprocs = 1
 autorestart = true
 autostart = true
 
 [program:couch-watcher]
-command = /app/.rvm/bin/rvmsudo /app/.rvm/wrappers/default/bundler exec rails runner /app/application/lib/couch_changes/base.rb
+command = /usr/local/rvm/bin/rvmsudo /usr/local/rvm/wrappers/default/bundler exec rails runner /app/lib/couch_changes/base.rb
 numprocs = 1
 numprocs_start = 0
 priority = 999
@@ -25,7 +26,7 @@ stdout_logfile_maxbytes = 50MB
 directory = /app
 
 [program:solr]
-command = /app/.rvm/wrappers/default/bundler exec rake sunspot:solr:run
+command = /usr/local/rvm/wrappers/default/bundler exec rake sunspot:solr:run
 process_name = %(program_name)s
 numprocs = 1
 numprocs_start = 0
