a few tweaks to docker supervisor config found while doing windows installer

--- a/docker/app/supervisord.conf
+++ b/docker/app/supervisord.conf
@@ -7,7 +7,7 @@ autorestart = true
 autostart = true
 
 [program:couch-watcher]
-command = /usr/local/rvm/bin/rvmsudo /usr/local/rvm/wrappers/default/bundler exec rails runner /app/lib/couch_changes/base.rb
+command = /usr/local/rvm/wrappers/default/bundler exec rails runner /app/lib/couch_changes/base.rb
 numprocs = 1
 numprocs_start = 0
 priority = 999
@@ -19,7 +19,7 @@ stopsignal = TERM
 stopwaitsecs = 10
 stopasgroup = true
 killasgroup = true
-user = primero
+user = root
 redirect_stderr = true
 stdout_logfile = /log/couch-watcher.log
 stdout_logfile_maxbytes = 50MB
@@ -36,6 +36,8 @@ autorestart = true
 startsecs = 1
 startretries = 3
 stopsignal = TERM
+stopasgroup = true
+killasgroup = true
 stopwaitsecs = 10
 user = primero
 redirect_stderr = false
